# Entropy-Analysis-Tool

./: .gitignore  CMakeLists.txt  README.md  main.cpp
assets/: resources.rc
src/core/: application.cpp  application.h  config.h  types.h
src/core/app_command/: app_command.cpp  app_command.h
src/core/thread_pool/: thread_pool.h
src/data/: data_manager.cpp  data_manager.h  models.h
src/data/find_first_passing_decimation/: find_first_passing_decimation.cpp  find_first_passing_decimation.h
src/data/histogram/: histogram.cpp  histogram.h
src/file_utils/: file_utils.cpp  file_utils.h
src/gui_platform/: gui_platform.cpp  gui_platform.h
src/ui/: ui_manager.cpp  ui_manager.h
src/ui/heuristic_assessment/: heuristic_manager.cpp  heuristic_manager.h
src/ui/statistic_assessment/: statistic_manager.cpp  statistic_manager.h
